--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
     <audio id="music" src="https://www.bensound.com/bensound-music/bensound-sunny.mp3"></audio>
   </div>
 
-  <script src="script.js"></script>
+  <script type="module" src="/src/script.js"></script>
 </body>
 </html>
